2014-01-27 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M python/ConfigManager.py
	* bug fix in userNormHistoSys: making sure that the normString identifying regions used for the normalization gets sets correctly depending on the current channel; this ensures that the correct regions are used for the normalization

2014-01-24 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M python/ConfigManager.py
	M scripts/HistFitter.py
	* remove loose signal regions used for remapping of systematic uncertainties in the exclusion fit (only if remapping was activated)

2014-01-14 Max Baak <mbaak@cern.ch>
	M       src/Utils.cxx
	M       src/Utils.h
	* scanf function (usable in python)

2014-01-13 Alex Koutsman <koutsman@cern.ch>
	   U python/configManager.py
	   U python/channel.py
	   U python/fitConfig.py
	   U python/sample.py
	   * Adding possibility to remap histoSys systematics. 
	   * In channel.py it is tested whether nBins and bin width is the same for the two channels in question
	
2013-12-16 Max Baak <mbaak@cern.ch>
	M       StatTools.cxx
	M       ConfigMgr.cxx
	M       LimitResult.cxx
	M       HypoTestTool.cxx
	M       StatTools.h
	M       LimitResult.h
	* Now also store expected +- Nsigma variation of discovery p-value
	* When running HistFitter.py -z myconfigfile.py

2013-12-13  Zach Marshall <zach.marshall@cern.ch>
	* python/prepareHisto.py: Removing very slow alias setting
	* scripts/HistFitter.py: Adding option to run code profiler

2013-12-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: first ExclusionCleanup() call could segfault, moved

2013-12-12 Alex Koutsman <koutsman@cern.ch>
	U    scripts/HistFitter.py
	* small fix for new --fitname option

2013-12-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: fix a bug where if in the user file the variable
	'args' was used to parse configMgr.userArg *and* the user would want to
	run a fit this would lead to an error: 